--- a/helm-webapp/templates/configmap.yaml
+++ b/helm-webapp/templates/configmap.yaml
@@ -3,6 +3,10 @@ apiVersion: v1
 metadata:
   name: {{ .Values.configmap.name }}
 data:
-  BG_COLOR: '#12181b'
-  FONT_COLOR: '#FFFFFF'
-  CUSTOM_HEADER: {{ .Values.configmap.data.CUSTOM_HEADER }}
+  NODE_ENV: 'staging'
+  PORT: '3000'
+  DB_NAME: 'neondb'
+  DB_USER: 'neondb_owner'
+  DB_PASSWORD: 'npg_ckbSC0MDrn5z'
+  DB_HOST: 'ep-purple-field-abstdy8v.eu-west-2.aws.neon.tech'
+  DB_SSL_REQUIRE: 'true'
