--- a/helm-webapp/values-dev.yaml
+++ b/helm-webapp/values-dev.yaml
@@ -1,6 +1,6 @@
 
-replicas: 2
+replicas: 1
 
 configmap:
   data:
-    CUSTOM_HEADER: 'This is on the DEV environment of my app!'
+    NODE_ENV: 'development'
