--- a/helm-webapp/values-prod.yaml
+++ b/helm-webapp/values-prod.yaml
@@ -1,6 +1,6 @@
 
-replicas: 4
+replicas: 2
 
 configmap:
   data:
-    CUSTOM_HEADER: 'This is on the PROD environment!'
+    NODE_ENV: 'production'
